Add product controller
